# distillarium

./: .gitignore  DEPLOY.md  LICENSE  README.md
.github/workflows/: deploy-site.yml  publish-pypi.yml
distillery_pkg/: .gitignore  README.md  pyproject.toml  release.sh
distillery_pkg/recipes/: needle.tool-calling-v1.yaml
distillery_pkg/src/distillarium/: __init__.py  cli.py  pipeline.py  recipe.py  spirit.py
distillery_pkg/src/distillarium/bottling/: __init__.py  exporters.py
distillery_pkg/src/distillarium/engine/: __init__.py  core.py  inference.py  router.py  schema.py  tokenizer.py  trainer.py
distillery_pkg/src/distillarium/tasting/: __init__.py  bfcl.py  evaluator.py
distillery_pkg/src/distillarium/teacher/: __init__.py  base.py  gemini.py
distillery_pkg/tests/: test_bfcl.py  test_evaluator.py  test_import.py
site/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  wrangler.toml
site/public/: _headers  _redirects  robots.txt
site/src/components/: BottleCard.astro  StillCanvas.astro
site/src/data/: cellar.json
site/src/layouts/: Base.astro
site/src/pages/: docs.astro  glossary.astro  how.astro  index.astro  use-cases.astro  why.astro
site/src/pages/cellar/: [slug].astro  index.astro
site/src/styles/: global.css
